--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,6 @@
 
 
-/*
-Author: Xpeedstudio
-Author URI: http://xpeedstudio.com
-*/
+
 
 /*==========================================
  01.  PREDIFINEED (FROM 1 TO 780 )
@@ -255,7 +252,7 @@ h3 span,
 h4 span,
 h5 span,
 p span{
-    color:#00a885;
+    color:#fd6106;
 }
 
 p {
@@ -350,19 +347,19 @@ Separator
     width:85px;
     height:2px;
     margin:20px 0px;
-    background: #00a885;
+    background: #fd6106;
 }
 .separator_auto{
     width:85px;
     height:2px;
     margin:20px auto;
-    background: #00a885;
+    background: #fd6106;
 }
 .separator_small{
     width:30px;
     height:2px;
     margin:20px 0px;
-    background: #00a885;
+    background: #fd6106;
 }
 
 /*
@@ -378,15 +375,15 @@ Button
 }
 .btn-primary{
     color: #fff;
-    background-color: #00a885;
+    background-color: #fd6106;
     border:1px solid;
-    border-color: #00a885;
+    border-color: #fd6106;
 
 }
 .btn-primary:hover{
-    background-color: #eee;
-    border-color: #eee;
-    color:#00a885;
+    background-color: transparent;
+    border-color: white;
+    border-color: #fd6106;
 }
 
 .btn-default{
@@ -397,8 +394,8 @@ Button
 }
 .btn-default:hover{
     color: #fff;
-    background-color: #00a885;
-    border-color: #00a885;
+    background-color: #fd6106;
+    border-color: #fd6106;
 }
 
 
@@ -690,7 +687,7 @@ textarea::-ms-input-placeholder{
 
 /*Preloader*/
 #loading{
-    background-color: #00a885;
+    background-color: #fff;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -723,7 +720,7 @@ textarea::-ms-input-placeholder{
 .object{
     width: 25px;
     height: 25px;
-    background-color: #FFF;
+    background-color: #fd6106;
     float: left;
 
 }
@@ -850,7 +847,7 @@ Nav Menu style
 }
 .navbar-callus li a i{
     font-size:13px;
-    color:#1abc9c;
+    color:#fd6106;
     margin-right: 5px;
 }
 .navbar-socail li a{
@@ -870,7 +867,7 @@ Home Section style
 ==================*/
 
 .home{
-    background: url(../images/home-bg.jpg) no-repeat scroll  center center;
+    background: url(../images/img1.jpg) no-repeat scroll  center center;
     background-size: cover;
     position: relative;
     padding-top: 300px;
@@ -879,15 +876,16 @@ Home Section style
 }
 .main_home .home_text h2{
     font-size:36px;
-    font-weight: 400;
+    font-weight: 150;
 }
 .main_home .home_text h1{
-    font-size:48px;
-    font-weight: 700;
+    font-size:66px;
+    font-weight: 250;
 }
 .main_home .home_text h3{
-    font-size:24px;
-    font-weight: 400;
+    font-size:14px;
+    font-weight: 200;
+    opacity: 70%;
 }
 .main_home .slick-dots li button::before {
     font-family: slick;
@@ -914,7 +912,7 @@ Home Section style
 }
 .main_home .slick-dots li.slick-active button:before{
     opacity: 1;
-    background-color: #00a885;
+    background-color: #fd6106;
 }
 .main_home .slick-dots{
     bottom: -200px;
@@ -955,7 +953,7 @@ Featured section style
 }
 .features_item .f_item_icon i{
     font-size:4rem;
-    color:#00a885;
+    color:#fd6106;
 }
 .features_item .f_item_text{
     display: inline-block;
@@ -1088,7 +1086,7 @@ work Section style
     top:30%;
 }
 .main_product .carousel-control:hover{
-    background-color: #00a885;
+    background-color: #fd6106;;
     color:#fff;
 }
 .main_product .carousel-control.left{
@@ -1111,7 +1109,7 @@ work Section style
 .main_product .port_overlay{
     width:100%;
     height: 100%;
-    background-color: rgba(0,168,133,0.60);
+    background-color: rgba(184, 212, 207, 0.6);
     position: absolute;
     left:0;
     top:0;
@@ -1159,7 +1157,7 @@ work Section style
 }
 .test_item:hover .item_img i{
     color:#fff;
-    background-color: #00a885;
+    background-color: #fd6106;
 }
 
 .main_test .item_img{
@@ -1224,7 +1222,7 @@ work Section style
     height: 0;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
-    border-top: 20px solid #00a885;
+    border-top: 20px solid #fd6106;
     left:50%;
     top:0%;
     z-index: 3;
@@ -1248,7 +1246,7 @@ work Section style
     font-weight: 700;
 }
 .widget_item .btn:hover{
-    background-color: #0ec9a2;
+    background-color: #fd6106;
 }
 .widget_item li a{
     color:#aaa;
@@ -1316,8 +1314,8 @@ work Section style
 .widget_newsletter .btn{
     width: 20%;
     padding: 0.65rem 1.2rem;
-    background-color: #00a885;
-    border-color:#00a885;
+    background-color: #fd6106;
+    border-color:#fd6106;
     color:#fff;
     border-radius: 0;
     margin-left:-4px;
